<resources>
    <string name="app_name">Attendance</string>
    <string name="Search">Enter Family</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="Language">English</string>
    <string name="Version">Ver:</string>
    <string name="Class">Class</string>
    <string name="save">Save</string>
    <string name="okey">okey</string>
    <string name="submit">submit</string>
    <string name="time">Time</string>
    <string name="pleaseWait">Please Wait...!</string>
    <string name="gettingData">Getting Data</string>
    <string name="cancle">Cancle</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="EnterDescription">Write your own description</string>
    <string name="textClassDelete">Deletes all sessions held in class!</string>
    <string name="checkYourInternetConnection">Check your internet connection!</string>
    <string name="EnterText">Enter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Score">Score</string>
    <string name="TitleDialogSendValidationEmail">Send verification code</string>
    <string name="BodyDialogSendValidationEmail">Do you want to send a verification code to your email?</string>
    <string name="SubjectDialogSendValidationEmail">Attendance software attestation code verification code</string>
    <string name="YourEmailDialog">your email</string>
    <string name="CodeDialog">Verification code</string>
    <string name="RateApp">Rate the app</string>
    <string name="Clear">clear</string>
    <string name="Backup">Backup</string>
    <string name="Upload">Upload</string>
    <string name="NameAndFamily">Full name</string>
    <string name="Absent">A</string>
    <string name="ErrorBuyApplication">You can choose the full version to use.</string>
    <string name="Saved">Saved...!</string>
    <string name="Error">Error</string>
    <string name="ClassDeleted">Class deleted ...!</string>
    <string name="SuccessRegistered">Successfully registered.</string>
    <string name="PleaseEnterClassNumber">Please enter class number ...!</string>
    <string name="PleaseEnterClassLocation">Please enter the Class Location ...!</string>
    <string name="PleaseEnterClassAttribute">Please enter the class attribute code ...!</string>
    <string name="PleaseEnterClassName">Please enter the class name ...!</string>
    <string name="thanksForYourPurchase">Thanks for your purchase ...!</string>
    <string name="failedPurchaseOperation">Failed purchase operation ...!</string>
    <string name="errorConnectAccountBazar">Please log in to your Bazar Cafe account in Market Software.</string>
    <string name="problemConnectingToBazar">Problem connecting to market cafe ...!</string>
    <string name="ErrorValidEmail">The entered email is not correct.</string>
    <string name="ErrorTextComment">Enter the text of the message</string>
    <string name="ErrorSubject">Enter the subject</string>
    <string name="ErrorEnterEmail">Enter the Email</string>
    <string name="ErrorEnterNameAndLastname">Enter the full name</string>
    <string name="Errorposting">Error posting ...!</string>
    <string name="editingDoneSuccessfully">Editing done successfully ...!</string>
    <string name="noEditsHaveBeenMade">No edits have been made ...!</string>
    <string name="EditStudentCode">Edit studen Code</string>
    <string name="EditStudentName">Edit student name</string>
    <string name="EditStudentFamily">Edit student Family</string>
    <string name="SetStudentDescription">Description</string>
    <string name="ErrorStudentCode">This studentCode is registered for another student</string>
    <string name="QuestionConnenctionNet">Is your device connected to the internet?</string>
    <string name="SendEmail">Send Email</string>
    <string name="HelloIsPassword">Hello Is Your Password</string>
    <string name="SubjectForgotPassword">Office software password attendance score</string>
    <string name="BackPage">Click again to return!</string>
    <string name="NoAddStudentToClass">No student registered to meet ...!</string>
    <string name="doYouWantMateing">Do you want a meeting</string>
    <string name="inTime"> Per hour </string>
    <string name="deleteMateing"> Delete?</string>
    <string name="TitleDialogdeleteMateing">Delete Session</string>
    <string name="SuccessfullyDeleteMateing">Session deleted successfully ..!</string>
    <string name="errorSubmitEmail">You must register your email in order to use this section.</string>
    <string name="errorConfirmPassword">Re-enter new password ...!</string>
    <string name="errorValidOldPassword">Re-enter your current password ...!</string>
    <string name="errorValidCode">Wrong code entered ...!</string>
    <string name="errorSendCodeDialogSuccess">The code was sent to your email ...!</string>
    <string name="EnterCodeSend">Enter the email sent code.</string>
    <string name="errorBuyApp">You have already purchased the app.</string>
    <string name="titleBackupDialog">Do you want to back up your data to the following memory?</string>
    <string name="titleUploadDataDialog">Do you want to refresh your data from memory below?</string>
    <string name="titleClearSoftwareDialog">Clear the software memory</string>
    <string name="bodyClearSoftwareDialog">By clearing the software memory all names, lessons and sessions held in the software are deleted!</string>
    <string name="bodyAboutus">Attendance software is designed and built for the convenience of professors and teachers. Vote for us to support us in the marketplace software</string>
    <string name="bodyExcllDialog1">Do you want to save Class </string>
    <string name="bodyExcllDialog2"> information in an Excel file?</string>
    <string name="ErrorSaveFile">Error saving file</string>
    <string name="ErrorCreadetFolder">Check the problem of creating a folder in the phone\'s memory.</string>
    <string name="ComingSoon">Coming Soon</string>
    <string name="errorAddEmail">To use this section you need to register your email in the settings section.</string>
    <string name="setingPassword">Password seting</string>
    <string name="setingStatusPassword">Cancel password</string>
    <string name="setingOldPassword">Password</string>
    <string name="setingNewPassword">New password</string>
    <string name="setingConfirmPassword">Confirm password</string>
    <string name="setingApp">Program settings</string>
    <string name="setingScore">Numeric scores</string>
    <string name="setingEmail">Email settings</string>
    <string name="setingEnterEmail">Enter Email</string>
    <string name="setingEmailText">If you set up a password for the software, register your email to send the password to the registered email if you forget the password.</string>
    <string name="AllMateing">Whole sessions</string>
    <string name="CountPresence">Presence count</string>
    <string name="CountAbsence">Absence count</string>
    <string name="TitleStatisticsActivity">Student attendance statistics</string>
    <string name="ToastNoData">For attendance statistics you need to have a meeting for your class ...!</string>
    <string name="TitleOldClassActivity">Past class list</string>
    <string name="Enter">Enter</string>
    <string name="ForgotPass">Forgot password?</string>
    <string name="EnterPassWord">Enter password</string>
    <string name="ClearPass">Clear</string>
    <string name="SendPassword">Send Password</string>
    <string name="TitleNewClassActivitu">Class attendance list</string>
    <string name="Date">Date</string>
    <string name="studentScore">Studen score</string>
    <string name="price_">Price</string>
    <string name="buy">Buy</string>
    <string name="CommentName">Enter the full name</string>
    <string name="CommentEmail">Enter the Email</string>
    <string name="CommentSubject">Enter the subject</string>
    <string name="CommentMessage">Enter the message</string>
    <string name="TextWeekend">classes</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="classLocation"> Class Location</string>
    <string name="classNumber">Class Number</string>
    <string name="classDescription">Class Description</string>
    <string name="className">Class Name</string>
    <string name="classStartTime">Class Start Time</string>
    <string name="classEndTime">Class End Time</string>
    <string name="pastMeetings">Past meetings</string>
    <string name="newMeeting">New meeting</string>
    <string name="classOutput">Class output</string>
    <string name="classEdit_">Class edit</string>
    <string name="addStudent">Add student</string>
    <string name="Desciption">Class description</string>
    <string name="daysofTheWeek">Days of the Week</string>
    <string name="ClassDelete">Class delete</string>
    <string name="studentsClass">Student class</string>
    <string name="absenceStats">Absence statistics</string>
    <string name="absenceList">Absence list</string>
    <string name="scoreList">Score list</string>
    <string name="weekDay_">Week day</string>
    <string name="studentCode">Student code</string>
    <string name="studentDescription">Student Description</string>
    <string name="classCharacteristic">Class characteristic</string>
    <string name="TitleOldClassListActivity">Meetings held</string>
    <string name="notCreateMate">No meeting for class ...!</string>
    <string name="Code">Code</string>
    <string name="studentName">Student Name</string>
    <string name="studentFamily">Student Family</string>
    <string name="textLerningExcell">To enter the student list you must first create a text file and enter the information as follows.
\n Code-Name-Family
\n Provide your students\’ names inside the Excel file so that you have the student number in column A, the student name in column B, and the student\’s last name in column C, and store the name IO.xls in the App_class folder.
\nThe full video tutorial is in the drop down menu</string>
    <string name="ErrorSaveDataInAddStudentActivityInformation">Data that has not been cleared after saving has already been entered ...!</string>
    <string name="ErrorSaveDataInAddStudentActivityEmptyData">Please enter all the details in order ...!</string>
    <string name="textGetExcellFile1">Do you want student names from memory</string>
    <string name="textGetExcellFile2">Get it in an Excel file called IO.xls?</string>
    <string name="addNewClass">add new Class</string>
    <string name="backupApplication">backup data class</string>
    <string name="uploadBackupApplication">upload back data</string>
    <string name="educationApplication">Learning to add a group of students to the class</string>
    <string name="clearDatabase">clear data</string>
    <string name="aboutUs">aboutUs</string>
    <string name="setting">setting</string>
    <string name="Suggestions">critics and suggestions</string>
    <string name="buyApplication">buy application</string>
    <string name="languageChange">change Language</string>
    <string name="exitApplication">exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="uri_bazar_my_application_class">bazaar://details?id=aspi.myclass</string>
    <string name="uri_bazar_my_application">"bazaar://collection?slug=by_author&amp;aid=aminsyahi1369"</string>
    <string name="package_bazar">com.farsitel.bazaar</string>
    <string name="Email">amin.syahi.1369@gmail.com</string>
    <string name="pass_Email">amin.syahi.1369@gmail.com</string>
</resources>