<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:elevation="8dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CustomObject.TextViewCustom
                android:id="@+id/list_class_in_main_name_class"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/className"
                android:padding="@dimen/_8sdp"
                android:layout_margin="2dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:textSize="15dp" />

            <CustomObject.TextViewCustom
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/classStartTime"
                android:id="@+id/list_class_in_main_start_time"
                android:layoutDirection="rtl"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="2dp"
                android:textColor="#1eac01"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="15dp" />

            <CustomObject.TextViewCustom
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/classEndTime"
                android:id="@+id/list_class_in_main_end_time"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="2dp"
                android:textColor="#f70b0b"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <CustomObject.TextViewCustom
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/classLocation"
                android:id="@+id/list_class_in_main_location"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

            <CustomObject.TextViewCustom
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/classNumber"
                android:padding="@dimen/_5sdp"
                android:id="@+id/list_class_in_main_class"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />
        </LinearLayout>

        <CustomObject.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/classDescription"
            android:id="@+id/list_class_in_main_txt"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>