<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aspi.myclass.activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/backgrund"
    android:focusableInTouchMode="false">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/horizontalScrollView_main"
                android:padding="5dp"
                android:layoutDirection="rtl">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:id="@+id/LinearLayout_maim">

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Saturday"
                        android:id="@+id/main_Saturday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp" />

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Sunday"
                        android:id="@+id/main_Sunday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp"/>

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Monday"
                        android:id="@+id/main_Monday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp" />

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Tuesday"
                        android:id="@+id/main_Tuesday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp"/>

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Wednesday"
                        android:id="@+id/main_Wednesday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp"/>

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Thursday"
                        android:id="@+id/main_Thursday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp"/>

                    <CustomObject.ButtonCustom
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/Friday"
                        android:id="@+id/main_Friday"
                        android:layout_weight="1"
                        android:background="@drawable/button_style3"
                        android:layout_margin="10dp"/>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|center_horizontal">

                <CustomObject.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/TextWeekend"
                    android:id="@+id/main_text_day_class"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView14"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView13"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="20dp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/recyclerview"/>

    </LinearLayout>
</RelativeLayout>
