<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:elevation="@dimen/_8sdp"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CustomObject.TextViewCustom
                android:id="@+id/list_lists_old_class_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <CustomObject.TextViewCustom
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Date"
                android:id="@+id/list_lists_old_class_data"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <CustomObject.ButtonCustom
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/show"
            android:id="@+id/list_lists_old_class_loggin"
            android:textColor="@color/green_dark"
            android:background="@drawable/button_style_save"
            android:layout_margin="@dimen/_5sdp"
            android:textSize="@dimen/_8sdp" />

        <CustomObject.ButtonCustom
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/delete"
            android:id="@+id/list_lists_old_class_delete"
            android:textColor="@color/red_dark"
            android:background="@drawable/button_style_cancel"
            android:layout_margin="@dimen/_5sdp"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>