<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:elevation="8dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CustomObject.ButtonCustom
                android:id="@+id/list_statistics_class_absent_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector"
                android:text="@string/absenceStats"
                android:textSize="15dp" />

            <CustomObject.ButtonCustom
                android:id="@+id/list_statistics_class_absent_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector"
                android:text="@string/absenceList"
                android:textSize="15dp" />

            <CustomObject.ButtonCustom
                android:id="@+id/list_statistics_class_nomreh_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/selector"
                android:text="@string/scoreList"
                android:textSize="15dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>